fixed contact info and layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
 	margin: 0;
 }
 
@@ -27,6 +28,7 @@ h2 {
 }
 
 h3 {
+	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 1.6em;
 	margin-top: 1em;
 }
@@ -65,7 +67,7 @@ img {
 
 .main-nav li {
 	background-color: #fff;
-	padding: .6em 0;
+	padding: .8em 0;
 	margin: .6em 0;
 }
 
@@ -78,12 +80,18 @@ img {
 
 .main-nav a:link,
 .main-nav a:visited,
+.phone a:link,
+.phone a:visited,
+.email a:link,
+.email a:visited,
 .back a:link,
 .back a:visited {
 	color: #686868;
 }
 
-.main-nav a:hover {
+.main-nav a:hover,
+.phone a:hover,
+.email a:hover {
 	color: #B4B3B3;
 }
 
@@ -116,31 +124,42 @@ img {
 	margin: 0.6em 0 2.8em 0;
 }
 
-.contact-info{
-	margin-bottom: 4em;
-}
-
-.contact-info a {
-	display: block;
+#contact h3 {
+	font-size: 1.2em;
 	font-weight: 700;
-	color: #666;
+	color: #252525;
+	margin: 2em 0;
 }
 
-.contact-info li {
-	padding: 4px;
+.contact-info {
+	margin: 3em 0;
 }
 
 .footer-name{
 	float: left;
 	font-size: 1.2em;
+	color: #252525;
+}
+
+.back a{
+	float: right;
+	color: #252525;
 }
 
 #footer-nav {
 	display: none;
 }
 
-.back {
-	float: right;
+.phone,
+.email {
+	display: block;
+	font-weight: 700;
+	color: #252525;
+}
+
+.phone a,
+.email a{
+	padding-left: .8em;
 }
 
 /* ---- Float clearfix ---- */
@@ -165,13 +184,13 @@ img {
 	/* ---- Navigation ---- */
 
 	.main-nav ul{	
-		display: inline-block;
-		margin-top: 0;	
+		display: inline-block;	
 	}		
 
 	.main-nav li {
 		float: left;
-		margin-right: 2em;
+		margin: .5em 2em 0 0;
+		padding: 0;
 		background-color: transparent;
 	}
 
@@ -212,10 +231,15 @@ img {
 		display: none;
 	}
 
+	#contact p {
+		display: inline-block;
+		width: 70%;
+	}
+
 	#footer-nav {
 		display: inline-block;
 		float: right;
-		font-size: .9em;
+		font-size: .8em;
 	}
 }
 
@@ -228,15 +252,13 @@ img {
 	/* ---- Layout Container ---- */
 	
 	body {
-		background-color: #f8f8f8;		
+		background-color: #f8f8f8;
+		max-width: 1250px;	
+		margin: 0 auto;		
 	}
 
-	.container {
-		width: 100%;		
-	}
-	
 	.portfolio {
-		margin: 0 2.2%;
+		margin: 0 2%;
 		background-color: #fff;
 	}
 
@@ -248,7 +270,12 @@ img {
 
 	.main-nav ul {	
 		float: right;
+		padding-top: 1em;
 	}	
+
+	#footer-nav ul {
+		padding-top: 0;
+	}
 
 	.main-nav a {
 		font-size: 1.1em;
@@ -282,6 +309,20 @@ img {
 
 	.gallery li:nth-child(3n + 1) {
 	  clear: left;
+	}
+
+	/* ---- Contact section ---- */
+
+	#contact h3 {
+		margin-bottom: 1em;
+	}
+
+	.contact-info {
+		margin-top: 1.2em;
+	}
+
+	#contact p {
+		width: 50%;
 	}
 
 }
